Background Image and Centered Text

--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
+
 <html>
+    <head>
+        <title> mcthomas.github.io </title>
+        <style>
+            html{
+                background:url('images/wallpaper.jpg') no-repeat center center fixed;
+                -webkit-background-size:cover;
+                -moz-background-size:cover;
+                -o-background-size:cover;
+                background-size: 100% 100vh;
+            }
+            
+            body{
+                color :#000000;
+            }
+        </style>
+        </head>
 <body>
-
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
-</body>
+    <p style="text-align: center"> Fuck</p>
+    </body>
 </html>
