--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         </style>
         </head>
 <body>
-    <p style="text-align: center"> Fuck</p>
+    <p style="text-align: center"> </p>
     </body>
 </html>
