Polished wallpaper, edited title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </head>
 <body>
 
-<h1><pre style="font-family: ProFont;"> M  a  t  t  '  s     S  p  a  c  e</pre></h1>
+<h1><pre style="font-family: ProFont;"> M  a  t  t  '  s     H  u  b</pre></h1>
 
 <div class="footer" style="font-family: ProFont; color: cyan;">[in early dev]</div>
 
