Added twitter link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         </head>
 <body>
 
+
+
 <h1><pre style="font-family: ProFont;"></pre></h1>
 
 <div class="footer" style="font-family: ProFont; color: cyan;">[in early dev]</div>
@@ -30,10 +32,12 @@
 </div>
 
 <div id="imagesSocial">
-  <a style="text-decoration:none;" href="https://twitter.com"><img src="images/twitter.png" </a>
+  <a style="text-decoration:none;" href="https://twitter.com/Matt_C_Thomas"><img src="images/twitter.png" </a>
   <a style="text-decoration:none;" href="https://www.instagram.com/matt.c.thomas/"><img src="images/instragram.png"</a>
   
 </div>
+
+
 
 
     </body>
