No longer in "early" dev ;)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <h1><pre style="font-family: ProFont;"></pre></h1>
 
-<div class="footer" style="font-family: ProFont; color: cyan;">[in early dev]</div>
+<div class="footer" style="font-family: ProFont; color: cyan;">[in dev]</div>
 
 <div id="imagesMain">
   <a style="text-decoration:none;" href="http://mthomas.bandcamp.com"><img src="images/bandcamp.png"</a>
