Commented out footer

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     
     	<link rel="stylesheet" href="css/format.css">
         <title> mcthomas.github.io </title>
-        <style>
+        <!--<style>
         	.footer{ 
        			position: fixed;     
        			text-align: left;    
        			bottom: 0px; 
        			width: 100%;
-   			} 
+   			} -->
            
         </style>
         </head>
 <body>
 
-<div class="footer" style="font-family: ProFont; color: cyan;">[in dev]</div>
+<!--<div class="footer" style="font-family: ProFont; color: cyan;">[in dev]</div>-->
 
 <div id="imagesMain">
   <a style="text-decoration:none;" href="http://mthomas.bandcamp.com"><img src="images/bandcamp.png"</a>
