--- a/dice/index.html
+++ b/dice/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-
 <html>
     <head>
-    
-        <link rel="stylesheet" href="css/format.css">
+        <link href="txtstyle.css" rel="stylesheet" type="text/css" />
         <title> mcthomas.github.io </title>
         <meta Content-Type: text/html; charset=utf-8>
         </head>
 <body>
-    
     <script type="text/javascript">
     var dice = ["⚀", "⚁", "⚂", "⚃", "⚄", "⚅"];
     document.write(dice[Math.floor(Math.random() * 6)] + dice[Math.floor(Math.random() * 6)]);
     </script>
-
     </body>
 </html>
 
