--- a/Dice/index.html
+++ b/Dice/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link href="txtstyle.css" rel="stylesheet" type="text/css" />
-        <title> mcthomas.github.io </title>
+        <title> dice </title>
         <meta Content-Type: text/html; charset=utf-8>
         </head>
 <body>
