--- a/dice/index.html
+++ b/dice/index.html
@@ -8,7 +8,7 @@
 <body>
     <script type="text/javascript">
     var dice = ["⚀", "⚁", "⚂", "⚃", "⚄", "⚅"];
-    document.write((dice[Math.floor(Math.random() * 6)] + " " + dice[Math.floor(Math.random() * 6)]).fontsize(15));
+    document.write((dice[Math.floor(Math.random() * 6)] + dice[Math.floor(Math.random() * 6)]).fontsize(15));
     </script>
     <button type="submit"  onClick="refreshPage()">Roll</button>
     <script>
