--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
     	<link rel="stylesheet" href="css/format.css">
         <title> mcthomas.github.io </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.5">
+        <meta name="viewport" content="width=device-width, initial-scale=.5">
         
     </head>
 <body>
