--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         
     	<link rel="stylesheet" href="css/format.css">
         <title> mcthomas.github.io </title>
+        <meta name="viewport" content="width=device-width, initial-scale=.75">
         
     </head>
 <body>
