--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id="portrait"class="fade-in"><img src="style/images/profile.png"></div>
     <p id="title">&nbsp;hightlights</p>
     
+    <div id="line"><hr></div>
+    
     <div id="feed">
 
     <div class="red feedItem">
