Added meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <head>
         <link rel="stylesheet" href="style/style.css">
         <title>Matt's Feed</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="A personal website to learn about web dev while aggregating my content.">
+        <meta name="keywords" content="Matt, Thomas, music, pilot, drone, animation, game, developer">
+        <meta name="author" content="Matt Thomas">
     </head>
     
     <body class="framed">
@@ -17,7 +21,7 @@
     <div id="feed">
 
     <div class="red feedItem">
-        <iframe style="border: 0; width:705px; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=815561479/size=large/bgcol=333333/linkcol=4ec5ec/tracklist=false/artwork=small/transparent=true/" alt="Flux EP" seamless><a href="http://mthomas.bandcamp.com/album/flux-ep">FLUX - EP by Matt Thomas</a></iframe>
+        <iframe style="border: 0; width:706px; height: 121px;" src="https://bandcamp.com/EmbeddedPlayer/album=815561479/size=large/bgcol=333333/linkcol=4ec5ec/tracklist=false/artwork=small/transparent=true/" alt="Flux EP" seamless><a href="http://mthomas.bandcamp.com/album/flux-ep">FLUX - EP by Matt Thomas</a></iframe>
     </div>
     
     <div class="orange feedItem">
