--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     
     <head>
         <link rel="stylesheet" href="style/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <title>Matt's Feed</title>
         <meta charset="UTF-8">
         <meta name="description" content="A personal website to learn about web dev while aggregating my content.">
