--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <link rel="stylesheet" href="style/style.css">
         <title>Matt's Feed</title>
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
         <meta charset="UTF-8">
         <meta name="description" content="A personal website to learn about web dev while aggregating my content.">
         <meta name="keywords" content="Matt, Thomas, music, pilot, drone, animation, game, developer">
