--- a/mondrian/index.html
+++ b/mondrian/index.html
@@ -10,7 +10,10 @@
 	 </canvas>
      <br/>
      <input id="slider1" type="range" min="0" max="100" />
-     <script> main() </script>
+     <br>
+     <input id="slider2" type="range" min="0" max="100" />
+     <br>
+     <input id="button1" type="button" value="Regenerate" />
      <script src="draw.js" id="module"></script>
   </body>
 </html>
