--- a/nav/mondrian/index.html
+++ b/nav/mondrian/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Mondrian Composer</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 <body>
 	 <canvas id="myCanvas" 
