vCard name / hover, gif compressed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="https://mcthomas.github.io/microblog"><div id="microblog">microblog</div></a>
     <div id="percentage"></div>
         
-    <div id="vCard"><a href="style/files/vCard.vcf"> <img src="style/images/vCard.png" width="60"></a></div>
+    <div id="vCard"><a href="style/files/vCard.vcf" download="Matt Thomas"> <img src="style/images/vCard.png" width="60"></a></div>
     
     <div id="portrait"><img src="style/images/portrait.png"></div>
     <p id="title">&nbsp;highlights</p>
