name scheme / resizing

--- a/arwing/index.html
+++ b/arwing/index.html
@@ -2,7 +2,7 @@
         <!DOCTYPE html>
         <html>
           <head>
-            <title>WebGL cube drawn with indexed vertex list</title>
+            <title>Arwing Model</title>
             <link rel="stylesheet" href="style.css">
                 <meta charset="UTF-8">
           </head>
