--- a/flight/index.html
+++ b/flight/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mapping Simulated Flight Patterns</title>
+    <title>Flight Paths</title>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
   </head>
