--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
     <div class="purple feedItem">
         
-        &emsp;&emsp;&emsp;<a href="https://mcthomas.github.io/mondrian"><button class="button buttonHover"type="button">Mondrian Generator</button></a>&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;<a href="https://mcthomas.github.io/mondrian"><button class="button buttonHover"type="button">Mondrian Composer</button></a>&emsp;&emsp;&emsp;
         <a href="https://mcthomas.github.io/train"><button class="button buttonHover" type="button">Steam Train</button></a>&emsp;&emsp;&emsp;
         <a href="https://mcthomas.github.io/flight"><button class="button buttonHover" type="button">Flight Paths</button></a>&emsp;&emsp;&emsp;
         <a href="https://mcthomas.github.io/arwing"><button class="button buttonHover" type="button">Arwing Model</button></a>&emsp;&emsp;&emsp;
