--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     
     <div id="iconsSmall">
         <a href="https://www.instagram.com/matt.c.thomas/"alt="Instagram"><img src="style/images/instagram.png"</a>
-        <a href="https://www.linkedin.com/in/matt-thomas-9a6a521a3/"alt="LinkedIn"><img src="style/images/linkedin.png"</a>
+        <a href="https://www.linkedin.com/in/matt-thomas-dev"alt="LinkedIn"><img src="style/images/linkedin.png"</a>
     </div>
     
     <div id="resume"><a href="style/files/resume.pdf" download="Resume"> <img src="style/images/resume.png" width="60"></a></div>
