Added pages for content, more styling

--- a/arwing/index.html
+++ b/arwing/index.html
@@ -3,7 +3,7 @@
         <html>
           <head>
             <title>Arwing Model</title>
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="style/style.css">
                 <meta charset="UTF-8">
           </head>
 
@@ -77,8 +77,8 @@
             <br>
             <input id="slider1" type="range" min="-100" max="100" />
             <input id="slider2" type="range" min="-100" max="100" />
-            <script type="text/javascript" src="gl-matrix-min.js"></script>
-            <script type="text/javascript" src="andross.imgjs"></script>
-            <script src="arwing.js" id="module"></script>
+            <script type="text/javascript" src="js/gl-matrix-min.js"></script>
+            <script type="text/javascript" src="style/images/andross.imgjs"></script>
+            <script src="js/arwing.js" id="module"></script>
           </body>
         </html>
