--- a/flight/index.html
+++ b/flight/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>Flight Paths</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <meta charset="UTF-8">
   </head>
   <body>
    <canvas id="cameraCanvas" width="800" height="600" style="border:1px solid #888;"></canvas>
       <canvas id="observerCanvas" width="0" height="0" style="border:1px solid #888;"></canvas>
-    <script src="flight.js" id="module"></script>
+    <script src="js/flight.js" id="module"></script>
     </br>
     <input id="slider1" type="range" min="0" max="200" /> ← Move airplanes along flight path
     </br>
