--- a/mondrian/index.html
+++ b/mondrian/index.html
@@ -1,22 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Mondrian Composer</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-<body>
-	 <canvas id="myCanvas" 
-	   width="820" height="500"
-	   style="border:1px solid #000;">
-	 </canvas>
-     <br/>
-     <input id="slider1" type="range" min="0" max="100" />
-     <br>
-     <input id="slider2" type="range" min="0" max="100" />
-     <br>
-     <input id="button1" type="button" value="Regenerate" />
-     <script src="draw.js" id="module"></script>
-  </body>
-</html>
+  <html>
+
+      <head>
+          <title>COLORFORMS</title>
+          <link rel="stylesheet" href="style/style.css">
+          <link rel="icon" type="image/png" sizes="64x64" href="../style/images/favicon.png">
+          <meta charset="UTF-8">
+          <meta name="author" content="Matt Thomas">
+      </head>
+
+      <body class="framed">
+
+    <iframe id="content" src="https://player.vimeo.com/video/317905708"  width="1000"                         height="800" frameborder="0" allow="fullscreen" allowfullscreen> <a                href="https://player.vimeo.com/video/358572132"></a></iframe>
 
 
+
+      </body>
+      </html>
