--- a/train/index.html
+++ b/train/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta name="description" content="Steam Train Animation">
       <meta charset="utf-8">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="style/style.css">
       <title>Steam Train Animation</title>
     </head>
     <body>
@@ -17,6 +17,6 @@
         <input id="slider2" type="range" min="-100" max="100" />
         <br/>
         <input id="slider3" type="range" min="-100" max="0" />
-        <script src="draw.js" id="module"></script>
+        <script src="js/draw.js" id="module"></script>
     </body>
 </html>
