--- a/flux/index.html
+++ b/flux/index.html
@@ -10,8 +10,7 @@
 
       <body class="framed">
 
-    <iframe id="content" src="https://player.vimeo.com/video/358572132"  width="1000"                         height="800" frameborder="0" allow="fullscreen" allowfullscreen> <a                href="https://player.vimeo.com/video/358572132"></a></iframe>
-
+<iframe id="content" style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=815561479/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/transparent=true/" seamless><a href="https://colourforms.bandcamp.com/album/flux-ep">FLUX - EP by COLORFORMS</a></iframe>
 
 
       </body>
