Removed dead code & files, shrunk images, updated vcard, beautified

--- a/logan/index.html
+++ b/logan/index.html
@@ -1,18 +1,28 @@
-  <html>
+<html>
+  <head>
+    <title>COLORFORMS</title>
+    <link rel="stylesheet" href="style/style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="64x64"
+      href="../style/images/favicon.png"
+    />
+    <meta charset="UTF-8" />
+    <meta name="author" content="Matt Thomas" />
+  </head>
 
-      <head>
-          <title>COLORFORMS</title>
-          <link rel="stylesheet" href="style/style.css">
-          <link rel="icon" type="image/png" sizes="64x64" href="../style/images/favicon.png">
-          <meta charset="UTF-8">
-          <meta name="author" content="Matt Thomas">
-      </head>
-
-      <body class="framed">
-
-    <iframe id="content" src="https://player.vimeo.com/video/358572132"  width="1000"                         height="800" frameborder="0" allow="fullscreen" allowfullscreen> <a                href="https://player.vimeo.com/video/358572132"></a></iframe>
-
-
-
-      </body>
-      </html>
+  <body class="framed">
+    <iframe
+      id="content"
+      src="https://player.vimeo.com/video/358572132"
+      width="1000"
+      height="800"
+      frameborder="0"
+      allow="fullscreen"
+      allowfullscreen
+    >
+      <a href="https://player.vimeo.com/video/358572132"></a
+    ></iframe>
+  </body>
+</html>
