--- a/flux/index.html
+++ b/flux/index.html
@@ -1,17 +1,26 @@
-  <html>
+<html>
+  <head>
+    <title>COLORFORMS</title>
+    <link rel="stylesheet" href="style/style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="64x64"
+      href="../style/images/favicon.png"
+    />
+    <meta charset="UTF-8" />
+    <meta name="author" content="Matt Thomas" />
+  </head>
 
-      <head>
-          <title>COLORFORMS</title>
-          <link rel="stylesheet" href="style/style.css">
-          <link rel="icon" type="image/png" sizes="64x64" href="../style/images/favicon.png">
-          <meta charset="UTF-8">
-          <meta name="author" content="Matt Thomas">
-      </head>
-
-      <body class="framed">
-
-<iframe id="content" style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=815561479/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/transparent=true/" seamless><a href="https://colourforms.bandcamp.com/album/flux-ep">FLUX - EP by COLORFORMS</a></iframe>
-
-
-      </body>
-      </html>
+  <body class="framed">
+    <iframe
+      id="content"
+      style="border: 0; width: 350px; height: 470px"
+      src="https://bandcamp.com/EmbeddedPlayer/album=815561479/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/transparent=true/"
+      seamless
+      ><a href="https://colourforms.bandcamp.com/album/flux-ep"
+        >FLUX - EP by COLORFORMS</a
+      ></iframe
+    >
+  </body>
+</html>
