--- a/train/index.html
+++ b/train/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <meta name="description" content="Steam Train Animation">
-      <meta charset="utf-8">
-      <link rel="stylesheet" href="style/style.css">
-      <title>Steam Train Animation</title>
-    </head>
-    <body>
-        <canvas id="myCanvas"
-        width="900" height="500"
-        style="border:1px solid #000;">
-        </canvas>
-        <br/>
-        <input id="slider1" type="range" min="-100" max="100" />
-        <br/>
-        <input id="slider2" type="range" min="-100" max="100" />
-        <br/>
-        <input id="slider3" type="range" min="-100" max="0" />
-        <script src="js/draw.js" id="module"></script>
-    </body>
+  <head>
+    <meta name="description" content="Steam Train Animation" />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style/style.css" />
+    <title>Steam Train Animation</title>
+  </head>
+  <body>
+    <canvas
+      id="myCanvas"
+      width="900"
+      height="500"
+      style="border: 1px solid #000"
+    >
+    </canvas>
+    <br />
+    <input id="slider1" type="range" min="-100" max="100" />
+    <br />
+    <input id="slider2" type="range" min="-100" max="100" />
+    <br />
+    <input id="slider3" type="range" min="-100" max="0" />
+    <script src="js/draw.js" id="module"></script>
+  </body>
 </html>
