mobile test & remove debug

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       content="video, graphics, creative coding, games, apps, music"
     />
     <meta name="author" content="Matt Thomas" />
+    <meta name="viewport" content= "width=device-width, initial-scale=1.0">
     <script src="js/effects.js"></script>
   </head>
 
