--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       content="video, graphics, creative coding, games, apps, music"
     />
     <meta name="author" content="Matt Thomas" />
-    <meta name="viewport" content= "width=850, initial-scale=1">
+    <meta name="viewport" content= "width=850, initial-scale=.5">
     <script src="js/effects.js"></script>
   </head>
 
@@ -230,12 +230,6 @@
         <p></p>
         <iframe width="350" height="197.20" frameborder="0"></iframe>
       </div>
-
-      <div>
-        <p></p>
-        <iframe width="350" height="197.20" frameborder="0"></iframe>
-      </div>
-    </div>
 
     <div class="reset">
       <img
