--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       content="video, graphics, creative coding, games, apps, music"
     />
     <meta name="author" content="Matt Thomas" />
-    <meta name="viewport" content= "width=850, initial-scale=.5">
+    <meta name="viewport" content= "width=850, initial-scale=.1">
     <script src="js/effects.js"></script>
   </head>
 
@@ -226,6 +226,11 @@
         <iframe width="350" height="197.20" frameborder="0"></iframe>
       </div>
 
+      <div>
+        <p></p>
+        <iframe width="350" height="197.20" frameborder="0"></iframe>
+      </div>
+      
       <div>
         <p></p>
         <iframe width="350" height="197.20" frameborder="0"></iframe>
