--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       content="video, graphics, creative coding, games, apps, music"
     />
     <meta name="author" content="Matt Thomas" />
-    <meta name="viewport" content= "width=850, initial-scale=.1">
+    <meta name="viewport" content= "width=850, maximum-scale=1.0, user-scalable=no">
     <script src="js/effects.js"></script>
   </head>
 
