--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <p>FLUX - EP</p>
       </div>
 
-      <div class="container video">
+      <div class="container">
         <a href="https://colorforms.works/logan">
           <img
             class="video"
@@ -221,19 +221,16 @@
         <p>Green Screen Pseudo-Animation</p>
       </div>
 
-      <div>
+      <div class="container">
         <p></p>
         <iframe width="350" height="197.20" frameborder="0"></iframe>
       </div>
 
-      <div>
+      <div class="container">
         <p></p>
         <iframe width="350" height="197.20" frameborder="0"></iframe>
       </div>
-      
-      <div>
-        <p></p>
-        <iframe width="350" height="197.20" frameborder="0"></iframe>
+
       </div>
 
     <div class="reset">
