sub-page margins, titles

--- a/arwing/index.html
+++ b/arwing/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Arwing Model</title>
+    <title>3D Arwing Model</title>
     <link rel="stylesheet" href="style/style.css" />
     <meta charset="UTF-8" />
   </head>
