--- a/flight/index.html
+++ b/flight/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flight Paths</title>
+    <title>3D Flight Path</title>
     <link rel="stylesheet" href="style/style.css" />
     <meta charset="UTF-8" />
   </head>
