--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             height="197.20"
           />
         </a>
-        <p>3D Flight Path Model</p>
+        <p>3D Flight Path</p>
       </div>
 
       <div class="container">
