--- a/mondrian-generator/index.html
+++ b/mondrian-generator/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mondrian Composer</title>
+    <title>De Stijl Generator</title>
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
