--- a/logan/index.html
+++ b/logan/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>COLORFORMS</title>
+    <title>Green Screen Pseudo-Animation</title>
     <link rel="stylesheet" href="style/style.css" />
     <link
       rel="icon"
