--- a/mondrian/index.html
+++ b/mondrian/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>COLORFORMS</title>
+    <title>3D Mondrian Concept</title>
     <link rel="stylesheet" href="style/style.css" />
     <link
       rel="icon"
