--- a/logan/index.html
+++ b/logan/index.html
@@ -10,6 +10,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="author" content="Matt Thomas" />
+    <meta name="viewport" content= "width=device-width, initial-scale=1.0">
   </head>
 
   <body class="framed">
