--- a/logan/index.html
+++ b/logan/index.html
@@ -10,15 +10,14 @@
     />
     <meta charset="UTF-8" />
     <meta name="author" content="Matt Thomas" />
-    <meta name="viewport" content= "width=device-width, initial-scale=1.0">
   </head>
 
   <body class="framed">
     <iframe
       id="content"
       src="https://player.vimeo.com/video/358572132"
-      width="1000"
-      height="800"
+      width="100%"
+      height="100%"
       frameborder="0"
       allow="fullscreen"
       allowfullscreen
