--- a/models/index.html
+++ b/models/index.html
@@ -16,8 +16,8 @@
     <iframe
       id="content"
       src="https://player.vimeo.com/video/497338928"
-      width="1000"
-      height="800"
+      width="100%"
+      height="100%"
       frameborder="0"
       allow="fullscreen"
       allowfullscreen
