--- a/flight/index.html
+++ b/flight/index.html
@@ -4,6 +4,12 @@
     <title>3D Flight Path</title>
     <link rel="stylesheet" href="style/style.css" />
     <meta charset="UTF-8" />
+      <link
+        rel="icon"
+        type="image/png"
+        sizes="64x64"
+        href="../style/images/favicon.png"
+      />
   </head>
   <body>
     <canvas
