--- a/mondrian-generator/index.html
+++ b/mondrian-generator/index.html
@@ -3,6 +3,12 @@
   <head>
     <title>De Stijl Generator</title>
     <link rel="stylesheet" href="style/style.css" />
+    <link
+        rel="icon"
+        type="image/png"
+        sizes="64x64"
+        href="../style/images/favicon.png"
+    />
   </head>
   <body>
     <canvas
