--- a/train/index.html
+++ b/train/index.html
@@ -4,6 +4,12 @@
     <meta name="description" content="Steam Train Animation" />
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style/style.css" />
+    <link
+        rel="icon"
+        type="image/png"
+        sizes="64x64"
+        href="../style/images/favicon.png"
+    />
     <title>Steam Train Animation</title>
   </head>
   <body>
