--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       content="video, graphics, creative coding, games, apps, music"
     />
     <meta name="author" content="Matt Thomas" />
-    <meta name="viewport" content= "width=841">
+    <meta name="viewport" content= "width=831">
     <script src="js/effects.js"></script>
   </head>
 
@@ -244,7 +244,7 @@
       />
     </div>
     <div id="vCard">
-      <a href="style/files/Matt Thomas.vcf" download="Matt Thomas.vcf">
+      <a href="style/files/Matt Thomas.vcf" download="Matt\ Thomas.vcf">
         <img src="style/images/buttons/vCard.png"
       /></a>
     </div>
