Add dynamic P5 spectrum logo WIP

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <meta name="author" content="Matt Thomas" />
     <meta name="viewport" content= "width=792">
     <script src="js/effects.js"></script>
+    <script src="js/p5.js"></script>
+    <script src="js/logo.js"></script>
   </head>
 
   <body class="framed" onload="randSketch()">
@@ -28,7 +30,7 @@
       <div id="title">
         <p>color</p>
       </div>
-      <img src="style/images/COLOURFORMS.png" />
+      <div id="logo"></div>
       <div id="title">
         <p>forms</p>
       </div>
