--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
       content="video, graphics, creative coding, games, apps, music"
     />
     <meta name="author" content="Matt Thomas" />
-    <meta id="testViewport" name="viewport" content="width=device-width">
-    <script>
-	  var mvp = document.getElementById('testViewport');
-	  mvp.setAttribute('content','width=device-width+50');
-    </script>
+    <meta id="testViewport" name="viewport" content="width=660">
     <script src="js/effects.js"></script>
     <script src="js/p5.js"></script>
     <script src="js/logo.js"></script>
