--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       content="video, graphics, creative coding, games, apps, music"
     />
     <meta name="author" content="Matt Thomas" />
-    <meta id="testViewport" name="viewport" content="width=660">
+    <meta name="viewport" content="width=660, initial-scale=1.0">
     <script src="js/effects.js"></script>
     <script src="js/p5.js"></script>
     <script src="js/logo.js"></script>
