--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       content="video, graphics, creative coding, games, apps, music"
     />
     <meta name="author" content="Matt Thomas" />
-    <meta id="viewportTest" name="viewport" content="width=660, initial-scale=1.0">
+    <meta id="viewportTest" name="viewport" content="width=660">
     <script>
       var width = window.innerWidth + 100;
       document.getElementById('viewportTest').setAttribute('content',`width=${width}`);
