--- a/arwing/index.html
+++ b/arwing/index.html
@@ -82,8 +82,8 @@
     <br />
     <input id="slider1" type="range" min="-100" max="100" />
     <input id="slider2" type="range" min="-100" max="100" />
-    <script type="text/javascript" src="js/gl-matrix-min.js"></script>
+    <script type="text/javascript" src="scripts/gl-matrix-min.js"></script>
     <script type="text/javascript" src="style/images/andross.imgjs"></script>
-    <script src="js/arwing.js" id="module"></script>
+    <script src="scripts/arwing.js" id="module"></script>
   </body>
 </html>
