--- a/flight/index.html
+++ b/flight/index.html
@@ -24,7 +24,7 @@
       height="0"
       style="border: 1px solid #888"
     ></canvas>
-    <script src="js/flight.js" id="module"></script>
+    <script src="scripts/flight.js" id="module"></script>
     <br />
     <input id="slider1" type="range" min="0" max="200" /> ← Move airplanes along
     flight path
