--- a/flux/index.html
+++ b/flux/index.html
@@ -12,15 +12,7 @@
     <meta name="author" content="Matt Thomas" />
   </head>
 
-  <body class="framed">
-    <iframe
-      id="content"
-      
-      src="https://bandcamp.com/EmbeddedPlayer/album=815561479/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/transparent=true/"
-      seamless
-      ><a href="https://colourforms.bandcamp.com/album/flux-ep"
-        >FLUX - EP by COLORFORMS</a
-      ></iframe
-    >
+  <body>
+    <iframe id="content" style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=815561479/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="https://colourforms.bandcamp.com/album/flux-ep">FLUX - EP by COLORFORMS</a></iframe>
   </body>
 </html>
