--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       var width = .725*window.innerWidth;
       document.getElementById('mobileViewport').setAttribute('content',`width=${width}`);
     </script>
-    <script src="js/effects.js"></script>
-    <script src="js/p5.js"></script>
-    <script src="js/logo.js"></script>
+    <script src="scripts/effects.js"></script>
+    <script src="scripts/p5.min.js"></script>
+    <script src="scripts/logo.js"></script>
   </head>
 
   <body class="framed" onload="randSketch()">
@@ -75,9 +75,9 @@
       />
     </div>
 
+    <a href="https://github.com/mcthomas/Processing-Sketches">
     <div class="serv">
       <div class="container">
-        <a href="https://github.com/mcthomas/Processing-Sketches">
           <img
             id="proc-sketches"
             class="graphic"
@@ -85,143 +85,142 @@
             width="350"
             height="197.20"
           />
-        </a>
-
         <p>Static Processing Sketches</p>
       </div>
+    </a>
 
+      <a href="https://colorforms.works/models">
       <div class="container">
-        <a href="https://colorforms.works/models">
           <img
             class="video"
             src="style/images/content/models.png"
             width="350"
             height="197.20"
           />
-        </a>
         <p>3D Models Showcase</p>
       </div>
+    </a>
 
+      <a href="https://colorforms.works/arwing">
       <div class="container">
-        <a href="https://colorforms.works/arwing">
           <img
             class="graphic"
             src="style/images/content/arwing.png"
             width="350"
             height="197.20"
           />
-        </a>
         <p>3D Arwing Model</p>
       </div>
+    </a>
 
+      <a href="https://colorforms.works/mondrian-generator">
       <div class="container">
-        <a href="https://colorforms.works/mondrian-generator">
           <img
             class="graphic"
             src="style/images/content/mondrian-generator.png"
             width="350"
             height="197.20"
           />
-        </a>
         <p>De Stijl Generator</p>
       </div>
+    </a>
 
+      <a href="https://colorforms.works/train">
       <div class="container">
-        <a href="https://colorforms.works/train">
           <img
             class="graphic"
             src="style/images/content/train.png"
             width="350"
             height="197.20"
           />
-        </a>
         <p>Steam Train Animation</p>
       </div>
+    </a>
 
+      <a href="https://colorforms.works/flight">
       <div class="container">
-        <a href="https://colorforms.works/flight">
           <img
             class="graphic"
             src="style/images/content/flight.png"
             width="350"
             height="197.20"
           />
-        </a>
         <p>3D Flight Path</p>
       </div>
+    </a>
 
+      <a href="https://tinyurl.com/y8r6c6fe">
       <div class="container">
-        <a href="https://tinyurl.com/y8r6c6fe">
           <img
             class="graphic"
             src="style/images/content/shader.png"
             width="350"
             height="197.20"
           />
-        </a>
-
         <p>GLSL Shader Pair</p>
       </div>
+    </a>
 
+      <a href="https://github.com/mcthomas/trace">
       <div class="container">
-        <a class="app" href="https://github.com/mcthomas/trace"
-          ><img
+          <img
+            class="app" 
             src="style/images/content/trace.png"
             width="350"
             height="198.2"
           />
-        </a>
-
         <p>TRACE iOS App</p>
       </div>
+    </a>
 
+      <a href="https://github.com/mcthomas/beatswitch">
       <div class="container">
-        <a class="app" href="https://github.com/mcthomas/beatswitch"
-          ><img
+          <img
+            class="app"
             src="style/images/content/beatswitch.png"
             width="350"
             height="198.2"
           />
-        </a>
-
         <p>BeatSwitch iOS Game</p>
       </div>
+    </a>
 
+      <a href="https://colorforms.works/mondrian">
       <div class="container">
-        <a href="https://colorforms.works/mondrian">
           <img
             class="video"
             src="style/images/content/mondrian.png"
             width="350"
             height="197.20"
-        /></a>
+        />
         <p>3D Mondrian Concept</p>
       </div>
+    </a>
 
+    <a href="https://colorforms.works/flux">
       <div class="container">
-        <a href="https://colorforms.works/flux"
-          ><img
+          <img
             class="music"
             width="350"
             height="197.20"
             frameborder="0"
             src="style/images/content/flux.png"
-        /></a>
-
+        />
         <p>FLUX - EP</p>
       </div>
+    </a>
 
+    <a href="https://colorforms.works/logan">
       <div class="container">
-        <a href="https://colorforms.works/logan">
           <img
             class="video"
             src="style/images/content/logan.png"
             width="350"
             height="197.20"
-        /></a>
-
+        />
         <p>Green Screen Pseudo-Animation</p>
       </div>
+    </a>
 
       <div class="container">
         <p></p>
@@ -246,10 +245,8 @@
       />
     </div>
     <div id="vCard">
-      <a href="style/files/Matt Thomas.vcf" download="Matt\ Thomas.vcf">
-        <img src="style/images/buttons/vCard.png"
-      /></a>
+      <a href="style/downloads/Matt Thomas.vcf" download="Matt\ Thomas.vcf"><div class="nav-btn" id="contact">Contact</div></a>
     </div>
-    <a href="https://colorforms.works/blog"><div id="blog">Mind Nodes</div></a>
+    <a href="https://colorforms.works/mind-nodes"><div class="nav-btn" id="blog">Mind Nodes</div></a>
   </body>
 </html>
