--- a/mondrian-generator/index.html
+++ b/mondrian-generator/index.html
@@ -24,6 +24,6 @@
     <input id="slider2" type="range" min="0" max="100" />
     <br />
     <input id="button1" type="button" value="Regenerate" />
-    <script src="js/draw.js" id="module"></script>
+    <script src="scripts/draw.js" id="module"></script>
   </body>
 </html>
