--- a/train/index.html
+++ b/train/index.html
@@ -26,6 +26,6 @@
     <input id="slider2" type="range" min="-100" max="100" />
     <br />
     <input id="slider3" type="range" min="-100" max="0" />
-    <script src="js/draw.js" id="module"></script>
+    <script src="scripts/draw.js" id="module"></script>
   </body>
 </html>
