Fix favicon, entry link

--- a/mind-nodes/index.html
+++ b/mind-nodes/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="64x64"
-      href="../style/images/fmusavicon.png"
+      href="../style/images/favicon.png"
     />
     <meta charset="UTF-8" />
     <meta name="description" content="" />
@@ -34,7 +34,7 @@
       <a>Contents</a>
       <br />
       <br/><br/><br/>
-      <a href="https://test">
+      <a href="https://colorforms.works/mind-nodes/minimalism-in-art">
       <div class="post fade-in">
             <img src="style/images/bkmk-1.png"/>
             <p>
