Post Braun prods

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       var gameMode = false;
     </script>
     <script src="scripts/effects.js"></script>
-    <script src="scripts/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js"></script>
     <script src="scripts/logo.js"></script>
     <script src="scripts/neko.js"></script>
   </head>
