Fix index post title size for mobile

--- a/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
+++ b/mind-nodes/three-aesthetically-classic-braun-products-you-can-buy-today/index.html
@@ -30,7 +30,7 @@
       <img src="style/images/braun-timeline.png" />
       <br>
       <p class="contents">
-        Braun's task of finding its identity in today's markets is difficult and complicated. This is due in part to Dieter Rams' departure from Braun in 1997, and its individual divisions having been under changing ownership. Despite this, Braun has made encouraging strides under its current design lead, Oliver Grabes, including the revival of its audio category.  And several products remain in their catalog which markedly reflect the timeless aesthetic of classic designs from Dieter Rams and his talented team.      
+        Braun's challenge in finding its identity in today's markets is difficult and complicated. This is due in part to Dieter Rams' departure from Braun in 1997, and its individual divisions having been under changing ownership. Despite this, Braun has made encouraging strides under its current design lead, Oliver Grabes, including the revival of its audio category.  And several products remain in their catalog which markedly reflect the timeless aesthetic of classic designs from Dieter Rams and his talented team.      
       </p>
       <a href="https://www.amazon.co.jp/-/en/M-1010-Electric-Portable-Amazon-co-jp-Exclusive/dp/B09NR6YC6G">
         <img src="style/images/braun-mini.png" style="top: 20px;"/>
